Feat: lab 1 git added

--- a/Laboratorio01/lab1.ipynb
+++ b/Laboratorio01/lab1.ipynb
@@ -19,6 +19,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "LINK GIT: https://github.com/mar22266/LABORATORIOS-IA.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Task 1\n",
     "1. Considera un modelo de regresión lineal con dos características, X₁ y X₂, y sus pesos correspondientes w₁ y w₂. Si el modelo predice una salida y mediante la ecuación y = 2w₁X₁ + 3w₂X₂ + 1, ¿cuál es la interpretación del coeficiente 3w₂ en el contexto del modelo?\n",
     "\n",
