--- a/Laboratorio01/lab1.ipynb
+++ b/Laboratorio01/lab1.ipynb
@@ -45,12 +45,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#s"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import classification_report, confusion_matrix"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 11430 entries, 0 to 11429\n",
+      "Data columns (total 89 columns):\n",
+      " #   Column                      Non-Null Count  Dtype  \n",
+      "---  ------                      --------------  -----  \n",
+      " 0   url                         11430 non-null  object \n",
+      " 1   length_url                  11430 non-null  int64  \n",
+      " 2   length_hostname             11430 non-null  int64  \n",
+      " 3   ip                          11430 non-null  int64  \n",
+      " 4   nb_dots                     11430 non-null  int64  \n",
+      " 5   nb_hyphens                  11430 non-null  int64  \n",
+      " 6   nb_at                       11430 non-null  int64  \n",
+      " 7   nb_qm                       11430 non-null  int64  \n",
+      " 8   nb_and                      11430 non-null  int64  \n",
+      " 9   nb_or                       11430 non-null  int64  \n",
+      " 10  nb_eq                       11430 non-null  int64  \n",
+      " 11  nb_underscore               11430 non-null  int64  \n",
+      " 12  nb_tilde                    11430 non-null  int64  \n",
+      " 13  nb_percent                  11430 non-null  int64  \n",
+      " 14  nb_slash                    11430 non-null  int64  \n",
+      " 15  nb_star                     11430 non-null  int64  \n",
+      " 16  nb_colon                    11430 non-null  int64  \n",
+      " 17  nb_comma                    11430 non-null  int64  \n",
+      " 18  nb_semicolumn               11430 non-null  int64  \n",
+      " 19  nb_dollar                   11430 non-null  int64  \n",
+      " 20  nb_space                    11430 non-null  int64  \n",
+      " 21  nb_www                      11430 non-null  int64  \n",
+      " 22  nb_com                      11430 non-null  int64  \n",
+      " 23  nb_dslash                   11430 non-null  int64  \n",
+      " 24  http_in_path                11430 non-null  int64  \n",
+      " 25  https_token                 11430 non-null  int64  \n",
+      " 26  ratio_digits_url            11430 non-null  float64\n",
+      " 27  ratio_digits_host           11430 non-null  float64\n",
+      " 28  punycode                    11430 non-null  int64  \n",
+      " 29  port                        11430 non-null  int64  \n",
+      " 30  tld_in_path                 11430 non-null  int64  \n",
+      " 31  tld_in_subdomain            11430 non-null  int64  \n",
+      " 32  abnormal_subdomain          11430 non-null  int64  \n",
+      " 33  nb_subdomains               11430 non-null  int64  \n",
+      " 34  prefix_suffix               11430 non-null  int64  \n",
+      " 35  random_domain               11430 non-null  int64  \n",
+      " 36  shortening_service          11430 non-null  int64  \n",
+      " 37  path_extension              11430 non-null  int64  \n",
+      " 38  nb_redirection              11430 non-null  int64  \n",
+      " 39  nb_external_redirection     11430 non-null  int64  \n",
+      " 40  length_words_raw            11430 non-null  int64  \n",
+      " 41  char_repeat                 11430 non-null  int64  \n",
+      " 42  shortest_words_raw          11430 non-null  int64  \n",
+      " 43  shortest_word_host          11430 non-null  int64  \n",
+      " 44  shortest_word_path          11430 non-null  int64  \n",
+      " 45  longest_words_raw           11430 non-null  int64  \n",
+      " 46  longest_word_host           11430 non-null  int64  \n",
+      " 47  longest_word_path           11430 non-null  int64  \n",
+      " 48  avg_words_raw               11430 non-null  float64\n",
+      " 49  avg_word_host               11430 non-null  float64\n",
+      " 50  avg_word_path               11430 non-null  float64\n",
+      " 51  phish_hints                 11430 non-null  int64  \n",
+      " 52  domain_in_brand             11430 non-null  int64  \n",
+      " 53  brand_in_subdomain          11430 non-null  int64  \n",
+      " 54  brand_in_path               11430 non-null  int64  \n",
+      " 55  suspecious_tld              11430 non-null  int64  \n",
+      " 56  statistical_report          11430 non-null  int64  \n",
+      " 57  nb_hyperlinks               11430 non-null  int64  \n",
+      " 58  ratio_intHyperlinks         11430 non-null  float64\n",
+      " 59  ratio_extHyperlinks         11430 non-null  float64\n",
+      " 60  ratio_nullHyperlinks        11430 non-null  int64  \n",
+      " 61  nb_extCSS                   11430 non-null  int64  \n",
+      " 62  ratio_intRedirection        11430 non-null  int64  \n",
+      " 63  ratio_extRedirection        11430 non-null  float64\n",
+      " 64  ratio_intErrors             11430 non-null  int64  \n",
+      " 65  ratio_extErrors             11430 non-null  float64\n",
+      " 66  login_form                  11430 non-null  int64  \n",
+      " 67  external_favicon            11430 non-null  int64  \n",
+      " 68  links_in_tags               11430 non-null  float64\n",
+      " 69  submit_email                11430 non-null  int64  \n",
+      " 70  ratio_intMedia              11430 non-null  float64\n",
+      " 71  ratio_extMedia              11430 non-null  float64\n",
+      " 72  sfh                         11430 non-null  int64  \n",
+      " 73  iframe                      11430 non-null  int64  \n",
+      " 74  popup_window                11430 non-null  int64  \n",
+      " 75  safe_anchor                 11430 non-null  float64\n",
+      " 76  onmouseover                 11430 non-null  int64  \n",
+      " 77  right_clic                  11430 non-null  int64  \n",
+      " 78  empty_title                 11430 non-null  int64  \n",
+      " 79  domain_in_title             11430 non-null  int64  \n",
+      " 80  domain_with_copyright       11430 non-null  int64  \n",
+      " 81  whois_registered_domain     11430 non-null  int64  \n",
+      " 82  domain_registration_length  11430 non-null  int64  \n",
+      " 83  domain_age                  11430 non-null  int64  \n",
+      " 84  web_traffic                 11430 non-null  int64  \n",
+      " 85  dns_record                  11430 non-null  int64  \n",
+      " 86  google_index                11430 non-null  int64  \n",
+      " 87  page_rank                   11430 non-null  int64  \n",
+      " 88  status                      11430 non-null  object \n",
+      "dtypes: float64(13), int64(74), object(2)\n",
+      "memory usage: 7.8+ MB\n",
+      "None\n",
+      "                                                 url  length_url  \\\n",
+      "0              http://www.crestonwood.com/router.php          37   \n",
+      "1  http://shadetreetechnology.com/V4/validation/a...          77   \n",
+      "2  https://support-appleld.com.secureupdate.duila...         126   \n",
+      "3                                 http://rgipt.ac.in          18   \n",
+      "4  http://www.iracing.com/tracks/gateway-motorspo...          55   \n",
+      "\n",
+      "   length_hostname  ip  nb_dots  nb_hyphens  nb_at  nb_qm  nb_and  nb_or  ...  \\\n",
+      "0               19   0        3           0      0      0       0      0  ...   \n",
+      "1               23   1        1           0      0      0       0      0  ...   \n",
+      "2               50   1        4           1      0      1       2      0  ...   \n",
+      "3               11   0        2           0      0      0       0      0  ...   \n",
+      "4               15   0        2           2      0      0       0      0  ...   \n",
+      "\n",
+      "   domain_in_title  domain_with_copyright  whois_registered_domain  \\\n",
+      "0                0                      1                        0   \n",
+      "1                1                      0                        0   \n",
+      "2                1                      0                        0   \n",
+      "3                1                      0                        0   \n",
+      "4                0                      1                        0   \n",
+      "\n",
+      "   domain_registration_length  domain_age  web_traffic  dns_record  \\\n",
+      "0                          45          -1            0           1   \n",
+      "1                          77        5767            0           0   \n",
+      "2                          14        4004      5828815           0   \n",
+      "3                          62          -1       107721           0   \n",
+      "4                         224        8175         8725           0   \n",
+      "\n",
+      "   google_index  page_rank      status  \n",
+      "0             1          4  legitimate  \n",
+      "1             1          2    phishing  \n",
+      "2             1          0    phishing  \n",
+      "3             0          3  legitimate  \n",
+      "4             0          6  legitimate  \n",
+      "\n",
+      "[5 rows x 89 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cargar el dataset\n",
+    "phishing_data = pd.read_csv('dataset_phishing.csv')\n",
+    "\n",
+    "# Exploración inicial\n",
+    "print(phishing_data.info())\n",
+    "print(phishing_data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Codificar la variable objetivo\n",
+    "label_encoder = LabelEncoder()\n",
+    "phishing_data['status_encoded'] = label_encoder.fit_transform(phishing_data['status'])\n",
+    "\n",
+    "# Eliminar columnas irrelevantes\n",
+    "phishing_data_cleaned = phishing_data.drop(columns=['url', 'status'])\n",
+    "\n",
+    "# Separar características (X) y etiquetas (y)\n",
+    "X = phishing_data_cleaned.drop(columns=['status_encoded'])\n",
+    "y = phishing_data_cleaned['status_encoded']\n",
+    "\n",
+    "# Dividir los datos en entrenamiento (80%) y prueba (20%)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "\n",
+    "# Escalar las variables\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -99,7 +292,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.8"
   }
  },
