--- a/Laboratorio01/lab1.ipynb
+++ b/Laboratorio01/lab1.ipynb
@@ -29,11 +29,13 @@
     "# Task 1\n",
     "1. Considera un modelo de regresión lineal con dos características, X₁ y X₂, y sus pesos correspondientes w₁ y w₂. Si el modelo predice una salida y mediante la ecuación y = 2w₁X₁ + 3w₂X₂ + 1, ¿cuál es la interpretación del coeficiente 3w₂ en el contexto del modelo?\n",
     "\n",
-    "R//\n",
+    "R// Representa el cambio en la variable de salida y por cambio en la característica $X_2$ ,multiplicado por $3$. El $3$ Actúa como un factor de escala que amplifica el peso de $w_2$.\n",
     "\n",
     "2. Explica el concepto de multicolinealidad en el contexto de la regresión lineal. ¿Cómo afecta la multicolinealidad a la interpretación de los coeficientes de regresión individuales? \n",
     "\n",
-    "R//"
+    "R//Se define como una correlación alta entre dos o más variables predictoras en un modelo de regresión lineal. Es decir que la variable predictora se puede expresar como una combinación lineal de otras variables predictoras. \n",
+    "\n",
+    "En los coeficientes de regresión , la multicolinealidad aumenta la varianza en coeficientes estimados, sensibiliza las estimaciones a pequeños cambios en los datos y puede llegar a cambiar el signo de los coeficientes. "
    ]
   },
   {
