FEAT: Se cambio la estructura del Jupiter y se agregaron comentarios

--- a/Laboratorio01/lab1.ipynb
+++ b/Laboratorio01/lab1.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -238,6 +238,12 @@
     }
    ],
    "source": [
+    "# Codificar la variable objetivo\n",
+    "phishing_data[\"status_encoded\"] = phishing_data[\"status\"].apply(\n",
+    "    lambda x: 1 if x == \"phishing\" else 0\n",
+    ")\n",
+    "\n",
+    "# Identificación si el dataset esta balanceado\n",
     "status = phishing_data[\"status\"].value_counts()\n",
     "\n",
     "print(\"Distribución de status\")\n",
@@ -256,20 +262,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como se puede ver, el modelo si esta balanceado. Por lo que, no hay que aplicar ningún tipo de de balanceo como SMOTE.\n"
+    "Como se puede observar, el modelo si esta balanceado por lo que, no es necesario aplicar ninguna técnica de balanceo como SMOTE.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Codificar la variable objetivo\n",
-    "phishing_data[\"status_encoded\"] = phishing_data[\"status\"].apply(\n",
-    "    lambda x: 1 if x == \"phishing\" else 0\n",
-    ")\n",
-    "\n",
     "# Eliminar columnas irrelevantes\n",
     "phishing_data_cleaned = phishing_data.drop(columns=[\"url\", \"status\"])\n",
     "\n",
