FEAT: Se cambiaron los títulos de las Task

--- a/Laboratorio01/lab1.ipynb
+++ b/Laboratorio01/lab1.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 1\n",
+    "# Task 1 - Regresión Lineal\n",
     "\n",
     "1. Considera un modelo de regresión lineal con dos características, $X₁$ y $X₂$, y sus pesos correspondientes $w₁$ y $w₂$. Si el modelo predice una salida y mediante la ecuación $y = 2w₁X₁ + 3w₂X₂ + 1$, ¿cuál es la interpretación del coeficiente $3w₂$ en el contexto del modelo?\n",
     "\n",
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 2\n"
+    "# Task 2 - Clasificación de Sitios de Phishing Regresión Logística y KNN\n"
    ]
   },
   {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 2.1\n"
+    "# Task 2.1 - Regresión Logística\n"
    ]
   },
   {
