FEAT: Se mejoraron los títulos y los comentarios

--- a/Laboratorio01/lab1.ipynb
+++ b/Laboratorio01/lab1.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
     "\n",
     "\n",
     "def gradient_descent(X, y, weights, learning_rate, epochs):\n",
-    "    \"\"\"Aplicar el algoritmo de descenso del gradiente.\"\"\"\n",
+    "    \"\"\"Aplicar el algoritmo de gradiente descendiente.\"\"\"\n",
     "    m = y.shape[0]\n",
     "    costs = []\n",
     "\n",
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -406,12 +406,12 @@
    "source": [
     "## Justificación\n",
     "\n",
-    "### El accuracy mide el porcentaje de predicciones correctas. Es relevante porque el dataset está balanceado, por lo que no hay riesgo de que esta métrica sea engañosa. Además, es fácil de interpretar y muy buena para la clasificación binaria.\n"
+    "El accuracy mide el porcentaje de predicciones correctas. Es relevante porque el dataset está balanceado, por lo que no hay riesgo de que esta métrica sea engañosa. Además, es fácil de interpretar y muy buena para la clasificación binaria.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -459,13 +459,13 @@
    "source": [
     "# Consideraciones extras\n",
     "\n",
-    "Normalización: Ajustamos los valores de las variables para que estén en una escala similar. Esto hace que el modelo entrene de manera más estable y rápida.\n",
+    "**Normalización:** Ajustamos los valores de las variables para que estén en una escala similar. Esto hace que el modelo entrene de manera más estable y rápida.\n",
     "\n",
-    "Hiperparámetros: Probamos diferentes configuraciones para parámetros como la cantidad de iteraciones (épocas) y la velocidad de aprendizaje. Estos valores aseguran que el modelo aprenda correctamente sin quedarse atascado o entrenar demasiado rápido.\n",
+    "**Hiperparámetros:** Probamos diferentes configuraciones para parámetros como la cantidad de iteraciones (épocas) y la velocidad de aprendizaje. Estos valores aseguran que el modelo aprenda correctamente sin quedarse atascado o entrenar demasiado rápido.\n",
     "\n",
-    "Métrica de desempeño: Elegimos el accuracy porcentaje de predicciones correctas porque el dataset tiene una cantidad similar de ejemplos para cada clase (legitimate y phishing). Esto hace que esta métrica sea confiable.\n",
+    "**Métrica de desempeño:** Elegimos el accuracy porcentaje de predicciones correctas porque el dataset tiene la misma cantidad de ejemplos para cada clase (legitimate y phishing). Esto hace que esta métrica sea confiable.\n",
     "\n",
-    "Visualización: Para entender mejor los resultados, graficamos los datos en un plano utilizando dos características principales. Esto ayuda a ver cómo el modelo separa las clases y facilita su interpretación visual.\n"
+    "**Visualización:** Para entender mejor los resultados, graficamos los datos en un plano utilizando dos características principales. Esto ayuda a ver cómo el modelo separa las clases y facilita su interpretación visual.\n"
    ]
   },
   {
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 2.2\n"
+    "# Task 2.2 - K-Nearest Neighbors\n"
    ]
   },
   {
