Feat: lab almost finished

--- a/Laboratorio02/Lab02.ipynb
+++ b/Laboratorio02/Lab02.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -329,9 +329,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mensaje ingresado: hola me llamo andre\n",
+      "Probabilidades: {0: -37.190714021335005, 1: -38.7920862010779}\n",
+      "Clasificación: ham\n",
+      "Mensaje ingresado: te ganaste un carro\n",
+      "Probabilidades: {0: -43.59759400740432, 1: -42.08792306708223}\n",
+      "Clasificación: spam\n",
+      "Mensaje ingresado: promocion el dia de hoy\n",
+      "Probabilidades: {0: -52.62022231989755, 1: -52.10210190146098}\n",
+      "Clasificación: spam\n"
+     ]
+    }
+   ],
    "source": [
     "# Clasificación de Mensajes Futuros\n",
     "def clasificar_mensaje(mensaje, vocabulario, vocab_size, conteo_palabras, total_palabras, prob_clase):\n",
@@ -370,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,14 +850,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precisión del modelo SVM en prueba: 0.3707070707070707\n",
+      "Accuracy del modelo SVM en prueba: 0.3707070707070707\n",
       "Accuracy en el conjunto de validación: 0.35454545454545455\n"
      ]
     },
@@ -899,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1495,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1514,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
