--- a/Laboratorio02/Lab02.ipynb
+++ b/Laboratorio02/Lab02.ipynb
@@ -23,29 +23,29 @@
     "\n",
     "1. ¿Por qué el modelo de Naive Bayes se le considera “naive”?\n",
     "\n",
-    "        R//\n",
+    "        R// Se le considera Naive por que asume independencia entre las observaciones. \n",
     "\n",
     "\n",
     "2. Explique la formulación matemática que se busca optimizar en Support Vector Machine, además responda\n",
     "¿cómo funciona el truco del Kernel para este modelo? (Lo que se espera de esta pregunta es que puedan\n",
     "explicar en sus propias palabras la fórmula a la que llegamos que debemos optimizar de SVM en clase)\n",
     "\n",
-    "        R//\n",
+    "        R//Buscamos una separación de clases a traves de una linea que divide al conjunto de datos.  Dos lineas paralelas tocan los puntos más cercanos de cada clase y se maximiza la distancia entre ellas, para esto minimizamos la magnitud de $w$ y usamos multiplicadores de lagrange para combinar el objetivo y las restricciones en una función única. El truco del kernel transforma los datos a un espacio de mayor dimensión en donde los datos son lineales, calculando la similitud entre dos puntos o lo que es igual a un producto escalar en el nuevo espacio.\n",
     "\n",
     "\n",
     "3. Investigue sobre Random Forest y responda\n",
     "\n",
     "    a. ¿Qué tipo de ensemble learning es este modelo?\n",
     "\n",
-    "        R//\n",
+    "        R// Es un modelo de bootstrap  que construye modelos (arboles de decisión) entrenados independientemente sobre subconjuntos aleatorios de los datos originales. Las predicciones sopn luego agregadas para obtener el resultado final. \n",
     "\n",
     "    b. ¿Cuál es la idea general detrás de Random Forest?\n",
     "\n",
-    "        R//\n",
+    "        R//Mejorar la precisión de los modelos combinando arboles entrenados independientemente. Reduciendo la varianza del modelo final, garantizando un desempeño estable y generalizable.\n",
     "\n",
     "    c. ¿Por qué se busca baja correlación entre los árboles de Random Forest?\n",
     "\n",
-    "        R//"
+    "        R//Para aprovechar la diversidad de errores y reducir el overfitting , mejorando la capacidad de generalización del modelo."
    ]
   },
   {
