FEAT: se mejoró la respuesta de la pregunta 1.

--- a/Laboratorio02/Lab02.ipynb
+++ b/Laboratorio02/Lab02.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "1.  ¿Por qué el modelo de Naive Bayes se le considera “naive”?\n",
     "\n",
-    "        R// El modelo de Naive Bayes se considera \"naive\" (ingenuo) porque hace una suposición simplificadora sobre los datos donde, asume que las características (o variables predictoras) son independientes entre sí dado el valor de la variable objetivo.\n",
+    "        R// Se le considera Naive por que asume independencia entre las observaciones. Esto significa que hace una suposición simplificadora sobre los datos donde, asume que las características (o variables predictoras) son independientes entre sí dado el valor de la variable objetivo.\n",
     "\n",
     "2.  Explique la formulación matemática que se busca optimizar en Support Vector Machine, además responda\n",
     "    ¿cómo funciona el truco del Kernel para este modelo? (Lo que se espera de esta pregunta es que puedan\n",
@@ -90,7 +90,6 @@
     "\n",
     "        for linea in archivo:\n",
     "\n",
-    "\n",
     "            linea = linea.strip()  # Quitar espacios en blanco iniciales y finales\n",
     "\n",
     "            if not linea:\n",
@@ -101,13 +100,11 @@
     "\n",
     "            etiqueta = etiqueta.lower()  # Normalizar etiquetas a minúsculas\n",
     "\n",
-    "\n",
     "            mensaje = re.sub(\n",
     "                r\"[^a-zA-Z0-9\\s]\", \"\", mensaje\n",
     "            ).lower()  # Quitar caracteres especiales\n",
     "\n",
     "            mensajes.append(mensaje)\n",
-    "\n",
     "\n",
     "            etiquetas.append(1 if etiqueta == \"spam\" else 0)  # 1 para spam, 0 para ham\n",
     "\n",
@@ -119,7 +116,9 @@
     "# Cargar y limpiar el dataset\n",
     "\n",
     "\n",
+    "\n",
     "ruta_dataset = \"entrenamiento.txt\"\n",
+    "\n",
     "\n",
     "\n",
     "mensajes, etiquetas = cargar_y_limpiar_dataset(ruta_dataset)"
@@ -154,14 +153,12 @@
     "\n",
     "    # Calcular probabilidades de Naive Bayes con Laplace Smoothing\n",
     "\n",
-    "\n",
     "    vocabulario = set(word for mensaje in X for word in mensaje.split())\n",
     "\n",
     "    vocab_size = len(vocabulario)\n",
     "\n",
     "\n",
     "    # Inicializar conteos y probabilidades\n",
-    "\n",
     "\n",
     "    conteo_palabras = {clase: {} for clase in [0, 1]}\n",
     "\n",
@@ -172,17 +169,14 @@
     "\n",
     "    for clase in [0, 1]:\n",
     "\n",
-    "\n",
     "        mensajes_clase = [X[i] for i in range(len(X)) if y[i] == clase]\n",
     "\n",
     "        total_mensajes = len(mensajes_clase)\n",
-    "\n",
     "\n",
     "        prob_clase[clase] = total_mensajes / len(y)\n",
     "\n",
     "\n",
     "        for mensaje in mensajes_clase:\n",
-    "\n",
     "\n",
     "            for palabra in mensaje.split():\n",
     "\n",
@@ -202,6 +196,7 @@
     "# Calcular probabilidades para el modelo\n",
     "\n",
     "\n",
+    "\n",
     "vocabulario, vocab_size, conteo_palabras, total_palabras, prob_clase = (\n",
     "    calcular_probabilidades(X_train, y_train)\n",
     ")\n",
@@ -219,11 +214,9 @@
     "\n",
     "        probabilidades = {}\n",
     "\n",
-    "\n",
     "        for clase in [0, 1]:\n",
     "\n",
     "            probabilidad = np.log(prob_clase[clase])\n",
-    "\n",
     "\n",
     "            for palabra in mensaje.split():\n",
     "\n",
@@ -305,14 +298,12 @@
     "\n",
     "    # Calcular probabilidades de Naive Bayes con Laplace Smoothing\n",
     "\n",
-    "\n",
     "    vocabulario = set(word for mensaje in X for word in mensaje.split())\n",
     "\n",
     "    vocab_size = len(vocabulario)\n",
     "\n",
     "\n",
     "    # Inicializar conteos y probabilidades\n",
-    "\n",
     "\n",
     "    conteo_palabras = {clase: {} for clase in [0, 1]}\n",
     "\n",
@@ -323,17 +314,14 @@
     "\n",
     "    for clase in [0, 1]:\n",
     "\n",
-    "\n",
     "        mensajes_clase = [X[i] for i in range(len(X)) if y[i] == clase]\n",
     "\n",
     "        total_mensajes = len(mensajes_clase)\n",
-    "\n",
     "\n",
     "        prob_clase[clase] = total_mensajes / len(y)\n",
     "\n",
     "\n",
     "        for mensaje in mensajes_clase:\n",
-    "\n",
     "\n",
     "            for palabra in mensaje.split():\n",
     "\n",
