FEAT: Se agregaron comentarios

--- a/Laboratorio02/Lab02.ipynb
+++ b/Laboratorio02/Lab02.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 2 y 2.2\n"
+    "# Task 2 y 2.2 - Naive Bayes: Clasificador de Mensajes Ham/Spam\n"
    ]
   },
   {
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 2.2\n"
+    "# Task 2.2 - Construcción del modelo\n"
    ]
   },
   {
@@ -290,10 +290,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Construcción del Modelo\n",
-    "\n",
-    "\n",
-    "\n",
     "def calcular_probabilidades(X, y):\n",
     "\n",
     "    # Calcular probabilidades de Naive Bayes con Laplace Smoothing\n",
@@ -419,14 +415,14 @@
    "source": [
     "## Justificación de la métrica utilizada\n",
     "\n",
-    "## Accuracy es una métrica adecuada dado que el dataset tiene una distribución balanceada entre clases ham y spam\n"
+    "La métrica de accuracy es adecuada para evaluar este modelo debido a que el dataset presenta una distribución balanceada entre las clases ham y spam, lo que permite que accuracy refleje de manera precisa la proporción de predicciones correctas sobre el total.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 2.3\n"
+    "# Task 2.3 - Clasificación de mensajes futuros\n"
    ]
   },
   {
@@ -488,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 2.4\n"
+    "# Task 2.4 - Comparación con librerías\n"
    ]
   },
   {
